--- a/Test/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests.csproj
+++ b/Test/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests.csproj
@@ -19,6 +19,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="FluentAssertions" Version="6.7.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,5 +28,6 @@
 
   <ItemGroup>
     <None Remove="Moq" />
+    <None Remove="FluentAssertions" />
   </ItemGroup>
 </Project>
