--- a/Test/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests.csproj
+++ b/Test/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests.csproj
@@ -30,4 +30,8 @@
     <None Remove="Moq" />
     <None Remove="FluentAssertions" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
