--- a/Test/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests.csproj
+++ b/Test/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests/FamilyHubs.ServiceDirectoryAdminUi.Ui.UnitTests.csproj
@@ -18,10 +18,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\FamilyHubs.ServiceDirectoryAdminUi.Ui\FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="FluentAssertions" />
+    <None Remove="Moq" />
+  </ItemGroup>
 </Project>
