--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Properties/launchSettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Properties/launchSettings.json
@@ -17,12 +17,19 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
+    //"IIS Express": {
+    //  "commandName": "IISExpress",
+    //  "launchBrowser": true,
+    //  "environmentVariables": {
+    //    "ASPNETCORE_ENVIRONMENT": "Development"
+    //  }
+    //},
+    "live-profile": {
+      "commandName": "Project",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "applicationUrl": "https://localhost:7216;http://localhost:5216"
     }
   }
 }
