added Correct Baseurl for directory api

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.Release.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.Release.json
@@ -11,7 +11,7 @@
     "Hashstring": "DFE: Clean Architecture"
   },
   "ApplicationServiceApi": {
-    "ApiBaseUrl": "https://s181d01-as-fh-sd-api-dev.azurewebsites.net/",
+    "ApiBaseUrl": "https://s181d01-ca-fh-sd-api-dev.calmstone-6ca2c9be.westeurope.azurecontainerapps.io/",
     "SubscriptionKey": "Key",
     "ApiVersion": "1"
   }
