fhg-947: application Insights logs  for admin Ui

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -14,5 +14,7 @@
     "SubscriptionKey": "Key",
     "ApiVersion": "1"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "APPINSIGHTS_INSTRUMENTATIONKEY": "7ebbeec5-e0a2-4eee-879c-0d95b733f8c7",
+  "APPINSIGHTS_CONNECTION_STRING": "InstrumentationKey=7ebbeec5-e0a2-4eee-879c-0d95b733f8c7;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
 }
