Replaced session with redis cache

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>5d0a7b4b-3831-45b9-854d-7b92eb307a03</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
