Initial Lock Down

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
@@ -14,8 +14,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" />
-    <PackageReference Include="SFA.DAS.Http" Version="3.2.69" />
     <PackageReference Include="FamilyHubs.SharedKernel" Version="1.0.4" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.0" />
   </ItemGroup>
 
   <ItemGroup>
