--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "CacheConnection": "localhost:6379",
+  "AuthServiceUrl": "https://localhost:7108/",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
