FHG-905 - created the readme.md and a split the scripts to be able to run build and watch separately.

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/styles/package.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/styles/package.json
@@ -4,7 +4,8 @@
   "description": "GDS styles",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass --watch scss/application.scss -o ../wwwroot/css/ --output-style compressed"
+    "watch": "node-sass --watch scss/application.scss -o ../wwwroot/css/ --output-style compressed",
+    "build": "node-sass scss/application.scss -o ../wwwroot/css/ --output-style compressed"
   },
   "author": "",
   "license": "ISC",
