Session Timeout in now set in appsetting.json

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -1,5 +1,6 @@
 {
   "CacheConnection": "localhost:6379",
+  "SessionTimeOutMinutes": 30,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
