--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
@@ -31,4 +31,10 @@
     <Folder Include="styles\scss\patterns\" />
     <Folder Include="styles\scss\pages\" />
   </ItemGroup>
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Pages\OrganisationAdmin\ChooseOrganisation.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Pages\OrganisationAdmin\ChooseOrganisation.cshtml" />
+  </ItemGroup>
 </Project>
