Initial Addition of Excel Spreadsheet Upload

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -1,6 +1,7 @@
 {
   "CacheConnection": "localhost:6379",
   "SessionTimeOutMinutes": 30,
+  "IsUploadSpreadsheetEnabled": false,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
