Initial Addition of Excel Spreadsheet Upload

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -2,6 +2,7 @@
   "CacheConnection": "localhost:6379",
   "AuthServiceUrl": "https://localhost:7108/",
   "SessionTimeOutMinutes": 30,
+  "IsUploadSpreadsheetEnabled": false,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
