--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="DotNetCore.NPOI" Version="1.2.3" />
     <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="1.1.13" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
@@ -26,10 +27,12 @@
     <None Remove="styles\scss\pages\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Services\Dataupload\" />
     <Folder Include="styles\" />
     <Folder Include="styles\scss\" />
     <Folder Include="styles\scss\patterns\" />
     <Folder Include="styles\scss\pages\" />
+    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Remove="Pages\OrganisationAdmin\ChooseOrganisation.cshtml" />
