--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -2,7 +2,7 @@
   "CacheConnection": "localhost:6379",
   "AuthServiceUrl": "https://localhost:7108/",
   "SessionTimeOutMinutes": 30,
-  "IsUploadSpreadsheetEnabled": false,
+  "IsUploadSpreadsheetEnabled": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
