--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -13,7 +13,7 @@
     "Hashstring": "DFE: Clean Architecture"
   },
   "ApplicationServiceApi": {
-    "ApiBaseUrl": "https://s181d01-ca-fh-sd-api-dev.calmstone-6ca2c9be.westeurope.azurecontainerapps.io/",
+    "ApiBaseUrl": "https://localhost:7022/",
     "SubscriptionKey": "Key",
     "ApiVersion": "1"
   },
