--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -1,23 +1,18 @@
 {
-  "CacheConnection": "localhost:6379",
-  "SessionTimeOutMinutes": 30,
-  "IsUploadSpreadsheetEnabled": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "WebApplication": {
-    "AllowedHashstringCharacters": "56789BCDFGHJKLMNPRSTVWXY",
-    "Hashstring": "DFE: Clean Architecture"
-  },
-  "ApplicationServiceApi": {
-    "ApiBaseUrl": "https://localhost:7022/",
-    "SubscriptionKey": "Key",
-    "ApiVersion": "1"
-  },
-  "AllowedHosts": "*",
-  "APPINSIGHTS_INSTRUMENTATIONKEY": "7ebbeec5-e0a2-4eee-879c-0d95b733f8c7",
-  "APPINSIGHTS_CONNECTION_STRING": "InstrumentationKey=7ebbeec5-e0a2-4eee-879c-0d95b733f8c7;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
+    "CacheConnection": "localhost:49153",
+    "SessionTimeOutMinutes": 30,
+    "IsUploadSpreadsheetEnabled": true,
+    "LogLevel": "Verbose",
+    "WebApplication": {
+        "AllowedHashstringCharacters": "56789BCDFGHJKLMNPRSTVWXY",
+        "Hashstring": "DFE: Clean Architecture"
+    },
+    "ApplicationServiceApi": {
+        "ApiBaseUrl": "https://localhost:7022/",
+        "SubscriptionKey": "Key",
+        "ApiVersion": "1"
+    },
+    "AllowedHosts": "*",
+    "APPINSIGHTS_INSTRUMENTATIONKEY": "",
+    "APPINSIGHTS_CONNECTION_STRING": ""
 }
