--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,10 @@ stages:
   dependsOn: Build
   displayName: Deploy to Development
   condition: and(succeeded(), eq(variables.Deploy, 'true'))
+  variables:
+  - group: DevTest Management Resources
+  - group: Development Shared Resources
+  - group: Development FH.ServiceDirectory.Admin.Ui  
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
@@ -45,8 +49,12 @@ stages:
       ServiceConnection: FH-Development-ARM
 
 - stage: Deploy_Test
-  dependsOn: Build
+  dependson: Build
   displayName: Deploy to Test
+  variables:
+  - group: DevTest Management Resources
+  - group: Test Shared Resources
+  - group: Test FH.ServiceDirectory.Admin.Ui
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
@@ -54,8 +62,12 @@ stages:
       ServiceConnection: FH-Test-ARM
 
 - stage: Deploy_Production
-  dependsOn: Build
+  dependson: Build
   displayName: Deploy to Production
+  variables:
+  - group: Production Management Resources
+  - group: Production Shared Resources
+  - group: Production FH.ServiceDirectory.Admin.Ui
   jobs:
   - template: pipeline-templates/job/deploy.yml
     parameters:
