--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,39 +33,39 @@ stages:
       SolutionBaseName: $(SolutionBaseName)
       BuildConfiguration: $(BuildConfiguration)
 
-- stage: Deploy_Development
-  dependsOn: Build
-  displayName: Deploy to Development
-  condition: and(succeeded(), eq(variables.Deploy, 'true'))
-  variables:
-  - group: Development Shared Resources
-  - group: Development FH.ServiceDirectory.Admin.Ui  
-  jobs:
-  - template: pipeline-templates/job/deploy.yml
-    parameters:
-      Environment: Development
-      ServiceConnection: FH-Development-ARM
+# - stage: Deploy_Development
+  # dependsOn: Build
+  # displayName: Deploy to Development
+  # condition: and(succeeded(), eq(variables.Deploy, 'true'))
+  # variables:
+  # - group: Development Shared Resources
+  # - group: Development FH.ServiceDirectory.Admin.Ui  
+  # jobs:
+  # - template: pipeline-templates/job/deploy.yml
+    # parameters:
+      # Environment: Development
+      # ServiceConnection: FH-Development-ARM
 
-- stage: Deploy_Test
-  dependsOn: Build
-  displayName: Deploy to Test
-  variables:
-  - group: Test Shared Resources
-  - group: Test FH.ServiceDirectory.Admin.Ui
-  jobs:
-  - template: pipeline-templates/job/deploy.yml
-    parameters:
-      Environment: Test
-      ServiceConnection: FH-Test-ARM
+# - stage: Deploy_Test
+  # dependsOn: Build
+  # displayName: Deploy to Test
+  # variables:
+  # - group: Test Shared Resources
+  # - group: Test FH.ServiceDirectory.Admin.Ui
+  # jobs:
+  # - template: pipeline-templates/job/deploy.yml
+    # parameters:
+      # Environment: Test
+      # ServiceConnection: FH-Test-ARM
 
-- stage: Deploy_Production
-  dependsOn: Build
-  displayName: Deploy to Production
-  variables:
-  - group: Production Shared Resources
-  - group: Production FH.ServiceDirectory.Admin.Ui
-  jobs:
-  - template: pipeline-templates/job/deploy.yml
-    parameters:
-      Environment: Test
-      ServiceConnection: FH-Test-ARM
+# - stage: Deploy_Production
+  # dependsOn: Build
+  # displayName: Deploy to Production
+  # variables:
+  # - group: Production Shared Resources
+  # - group: Production FH.ServiceDirectory.Admin.Ui
+  # jobs:
+  # - template: pipeline-templates/job/deploy.yml
+    # parameters:
+      # Environment: Test
+      # ServiceConnection: FH-Test-ARM
