--- a/pipeline-templates/job/code-build.yml
+++ b/pipeline-templates/job/code-build.yml
@@ -22,7 +22,7 @@ jobs:
   - task: gitversion/execute@0
     displayName: gitversion/execute
     inputs:
-      configFilePath: ./gitversion.yml
+      configFilePath: ../GitVersion.yml
       useConfigFile: true
       includePrerelease: false
 
