CLeared password hash from appsettings

--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -3,7 +3,7 @@
   "SessionTimeOutMinutes": 30,
   "IsUploadSpreadsheetEnabled": true,
   "LogLevel": "Verbose",
-  "PasswordHash": "$2a$11$/.pVvygVsBaYWY9Dyl0Steol6kiFpIoOOnei5ZltSa4BSWYXTf9n.",
+  "PasswordHash": "",
   "WebApplication": {
     "AllowedHashstringCharacters": "56789BCDFGHJKLMNPRSTVWXY",
     "Hashstring": "DFE: Clean Architecture"
