--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -3,7 +3,7 @@
   "SessionTimeOutMinutes": 30,
   "IsUploadSpreadsheetEnabled": true,
   "LogLevel": "Verbose",
-  "Password": "Brockett",
+  "PasswordHash": "",
   "WebApplication": {
     "AllowedHashstringCharacters": "56789BCDFGHJKLMNPRSTVWXY",
     "Hashstring": "DFE: Clean Architecture"
