--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/FamilyHubs.ServiceDirectoryAdminUi.Ui.csproj
@@ -30,4 +30,10 @@
     <Folder Include="styles\scss\patterns\" />
     <Folder Include="styles\scss\pages\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Pages\Error\404.cshtml" />
+    <None Include="Pages\Error\500.cshtml" />
+    <None Include="Pages\Error\Index.cshtml" />
+    <None Include="Pages\Error\Test.cshtml" />
+  </ItemGroup>
 </Project>
