--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "CacheConnection": "localhost:6379",
+  "SessionTimeOutMinutes": 30,
+  "IsUploadSpreadsheetEnabled": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
