--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Properties/launchSettings.json
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Properties/launchSettings.json
@@ -23,6 +23,13 @@
         "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "applicationUrl": "https://localhost:7216;http://localhost:5216"
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
