--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -1,9 +1,26 @@
 {
-    "SessionTimeOutMinutes": 30,
-    "IsUploadSpreadsheetEnabled": true,
-    "LogLevel": "Verbose",
-    "ServiceDirectoryApiBaseUrl": "https://localhost:7022/",
-    "AllowedHosts": "*",
-    "APPINSIGHTS_INSTRUMENTATIONKEY": "",
-    "APPINSIGHTS_CONNECTION_STRING": ""
+  "SessionTimeOutMinutes": 30,
+  "IsUploadSpreadsheetEnabled": true,
+  "LogLevel": "Verbose",
+  "ServiceDirectoryApiBaseUrl": "https://localhost:7022/",
+  "AllowedHosts": "*",
+  "APPINSIGHTS_INSTRUMENTATIONKEY": "",
+  "APPINSIGHTS_CONNECTION_STRING": "",
+  "GovUkOidcConfiguration": {
+    "Oidc": {
+      "BaseUrl": "<baseUrl>",
+      "PrivateKey": "<PrivateKey>",
+      "ClientId": "<ClientId>",
+      "KeyVaultIdentifier": null
+    },
+    "Urls": {
+      "SignedOutRedirect": "https://localhost:7216/"
+    },
+    "IdamsApiBaseUrl": "https://localhost:7030",
+    "StubAuthentication": {
+      "UseStubAuthentication": true,
+      "UseStubClaims": true,
+      "PrivateKey" : "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+    }
+  }
 }
