--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -20,7 +20,8 @@
     "StubAuthentication": {
       "UseStubAuthentication": true,
       "UseStubClaims": true,
-      "PrivateKey" : "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-    }
+      "PrivateKey": "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+    },
+    "CookieName": "FamilyHubs.Admin.Ui"
   }
 }
