--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -8,9 +8,9 @@
   "APPINSIGHTS_CONNECTION_STRING": "",
   "GovUkOidcConfiguration": {
     "Oidc": {
-      "BaseUrl": "<baseUrl>",
-      "PrivateKey": "<PrivateKey>",
-      "ClientId": "<ClientId>",
+      "BaseUrl": null,
+      "PrivateKey": null,
+      "ClientId": null,
       "KeyVaultIdentifier": null
     },
     "Urls": {
