--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -7,6 +7,7 @@
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPINSIGHTS_CONNECTION_STRING": "",
   "GovUkOidcConfiguration": {
+    "AppHost": "https://localhost:7216",
     "Oidc": {
       "BaseUrl": null,
       "PrivateKey": null,
