--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -12,7 +12,11 @@
       "BaseUrl": null,
       "PrivateKey": null,
       "ClientId": null,
-      "KeyVaultIdentifier": null
+      "KeyVault": {
+        "Url": null,
+        "Key": null,
+        "VersionId": null
+      }
     },
     "Urls": {
       "SignedOutRedirect": "https://localhost:7216/"
