Kernel change test

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -7,16 +7,13 @@
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPINSIGHTS_CONNECTION_STRING": "",
   "GovUkOidcConfiguration": {
+    "BearerTokenSigningKey": "75291869-abb6-4b22-b200-bfa8057c07cf-8f861093-e1e6-47f1-ba8d-8b186080723d",
     "AppHost": "https://localhost:7216",
     "Oidc": {
       "BaseUrl": null,
       "PrivateKey": null,
       "ClientId": null,
-      "KeyVault": {
-        "Url": null,
-        "Key": null,
-        "VersionId": null
-      }
+      "KeyVaultIdentifier": null
     },
     "Urls": {
       "SignedOutRedirect": "https://localhost:7216/"
