Updated to use nuget package

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -7,7 +7,7 @@
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPINSIGHTS_CONNECTION_STRING": "",
   "GovUkOidcConfiguration": {
-    "BearerTokenSigningKey": "75291869-abb6-4b22-b200-bfa8057c07cf-8f861093-e1e6-47f1-ba8d-8b186080723d",
+    "BearerTokenSigningKey": null,
     "AppHost": "https://localhost:7216",
     "Oidc": {
       "BaseUrl": null,
@@ -21,8 +21,7 @@
     "IdamsApiBaseUrl": "https://localhost:7030",
     "StubAuthentication": {
       "UseStubAuthentication": true,
-      "UseStubClaims": true,
-      "PrivateKey": "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+      "UseStubClaims": true
     },
     "CookieName": "FamilyHubs.Admin.Ui"
   }
