--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -1,11 +1,11 @@
 {
-  "SessionTimeOutMinutes": 30,
-  "IsUploadSpreadsheetEnabled": true,
-  "LogLevel": "Verbose",
-  "ServiceDirectoryApiBaseUrl": "https://localhost:7022/",
   "AllowedHosts": "*",
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPINSIGHTS_CONNECTION_STRING": "",
+  "LogLevel": "Verbose",
+  "SessionTimeOutMinutes": 30,
+  "IsUploadSpreadsheetEnabled": true,
+  "ServiceDirectoryApiBaseUrl": "https://localhost:7022/",
   "GovUkOidcConfiguration": {
     "BearerTokenSigningKey": null,
     "AppHost": "https://localhost:7216",
@@ -20,8 +20,8 @@
     },
     "IdamsApiBaseUrl": "https://localhost:7030",
     "StubAuthentication": {
-      "UseStubAuthentication": true,
-      "UseStubClaims": true
+      "UseStubAuthentication": false,
+      "UseStubClaims": false
     },
     "CookieName": "FamilyHubs.Admin.Ui"
   }
