--- a/Test/FamilyHubs.ServiceDirectory.Admin.Web.UnitTests/FamilyHubs.ServiceDirectory.Admin.Web.UnitTests.csproj
+++ b/Test/FamilyHubs.ServiceDirectory.Admin.Web.UnitTests/FamilyHubs.ServiceDirectory.Admin.Web.UnitTests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
