re implemented Distributed Cache

--- a/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="DotNetCore.NPOI" Version="1.2.3" />
     <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="2.0.4" />
     <PackageReference Include="FamilyHubs.SharedKernel" Version="2.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.5" />
   </ItemGroup>
 
 </Project>
