--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -3,6 +3,7 @@
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPINSIGHTS_CONNECTION_STRING": "",
   "LogLevel": "Verbose",
+  "CacheConnection" : "",
   "SessionTimeOutMinutes": 30,
   "IsUploadSpreadsheetEnabled": true,
   "ServiceDirectoryApiBaseUrl": "https://localhost:7022/",
