--- a/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="2.0.4" />
     <PackageReference Include="FamilyHubs.SharedKernel" Version="2.0.12" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.5" />
+    <PackageReference Include="StackExchange.Redis" Version="2.6.111" />
   </ItemGroup>
 
 </Project>
