added missing config variable and code tidy

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -7,6 +7,7 @@
   "SessionTimeOutMinutes": 30,
   "IsUploadSpreadsheetEnabled": true,
   "ServiceDirectoryApiBaseUrl": "https://localhost:7022/",
+  "IdamApi": "https://localhost:7022/",
   "GovUkOidcConfiguration": {
     "BearerTokenSigningKey": null,
     "AppHost": "https://localhost:7216",
