Basic page renders

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -10,7 +10,7 @@
   "ServiceDirectoryApiBaseUrl": "https://localhost:7022/",
   "IdamApi": "https://localhost:7030/",
   "GovUkOidcConfiguration": {
-    "BearerTokenSigningKey": null,
+    "BearerTokenSigningKey": "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
     "AppHost": "https://localhost:7216",
     "Oidc": {
       "BaseUrl": null,
