--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/FamilyHubs.ServiceDirectory.Admin.Web.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/FamilyHubs.ServiceDirectory.Admin.Web.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FamilyHubs.SharedKernel" Version="2.0.20" />
+    <PackageReference Include="FamilyHubs.SharedKernel.Razor" Version="1.1.0" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.21.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
@@ -25,12 +26,10 @@
     <None Remove="FamilyHubs.SharedKernel" />
     <None Remove="styles\" />
     <None Remove="styles\scss\" />
-    <None Remove="styles\scss\patterns\" />
-    <None Remove="styles\scss\pages\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="styles\scss\patterns\" />
-    <Folder Include="styles\scss\pages\" />
+    <Folder Include="styles\patterns\" />
+    <Folder Include="styles\pages\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Pages\Error\404.cshtml" />
