#FGH-2101 signout page added

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -19,7 +19,7 @@
       "KeyVaultIdentifier": null
     },
     "Urls": {
-      "SignedOutRedirect": "https://localhost:7216/"
+      "SignedOutRedirect": "https://localhost:7216/signout"
     },
     "IdamsApiBaseUrl": "https://localhost:7030",
     "StubAuthentication": {
