#FHG-2106 navigate to gov one login account page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -3,12 +3,13 @@
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPINSIGHTS_CONNECTION_STRING": "",
   "LogLevel": "Verbose",
-  "GovUkNotifyApiKey" : "",
-  "CacheConnection" : "",
+  "GovUkNotifyApiKey": "",
+  "CacheConnection": "",
   "SessionTimeOutMinutes": 30,
   "IsUploadSpreadsheetEnabled": true,
   "ServiceDirectoryApiBaseUrl": "https://localhost:7022/",
   "IdamApi": "https://localhost:7030/",
+  "GovUkLoginAccountPage": "https://home.integration.account.gov.uk",
   "GovUkOidcConfiguration": {
     "BearerTokenSigningKey": null,
     "AppHost": "https://localhost:7216",
