Fhg 1617 manage permissions PartOne
* UI Fixes

* Basic page renders

* Style sheets fixed

* Css fixed

---------

Co-authored-by: Mike-V-Digital <122551010+Mike-V-Digital@users.noreply.github.com>

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -11,7 +11,7 @@
   "IdamApi": "https://localhost:7030/",
   "GovUkLoginAccountPage": "https://home.integration.account.gov.uk",
   "GovUkOidcConfiguration": {
-    "BearerTokenSigningKey": null,
+    "BearerTokenSigningKey": "StubPrivateKey123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
     "AppHost": "https://localhost:7216",
     "Oidc": {
       "BaseUrl": null,
