--- a/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
@@ -9,9 +9,10 @@
   <ItemGroup>
     <PackageReference Include="DotNetCore.NPOI" Version="1.2.3" />
     <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="2.0.5" />
-    <PackageReference Include="FamilyHubs.SharedKernel" Version="2.0.18" />
+    <PackageReference Include="FamilyHubs.SharedKernel" Version="2.0.20" />
+    <PackageReference Include="FamilyHubs.SharedKernel.Razor" Version="1.1.0" />
     <PackageReference Include="GovukNotify" Version="6.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="7.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="7.0.8" />
   </ItemGroup>
 
 </Project>
