--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -17,7 +17,8 @@
       "BaseUrl": null,
       "PrivateKey": null,
       "ClientId": null,
-      "KeyVaultIdentifier": null
+      "KeyVaultIdentifier": null,
+      "TwoFactorEnabled": true
     },
     "Urls": {
       "SignedOutRedirect": "https://localhost:7216/signout"
