FHG-3452 No Claims 401

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -21,7 +21,8 @@
       "TwoFactorEnabled": true
     },
     "Urls": {
-      "SignedOutRedirect": "https://localhost:7216/signout"
+      "SignedOutRedirect": "https://localhost:7216/signout",
+      "NoClaimsRedirect": "https://localhost:7216/Error/401"
     },
     "IdamsApiBaseUrl": "https://localhost:7030",
     "StubAuthentication": {
