--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/FamilyHubs.ServiceDirectory.Admin.Web.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/FamilyHubs.ServiceDirectory.Admin.Web.csproj
@@ -7,6 +7,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\ServiceWizzard\Controllers\**" />
+    <Compile Remove="Areas\ServiceWizzard\Data\**" />
+    <Compile Remove="Areas\ServiceWizzard\Models\**" />
+    <Compile Remove="Areas\ServiceWizzard\Views\**" />
+    <Content Remove="Areas\ServiceWizzard\Controllers\**" />
+    <Content Remove="Areas\ServiceWizzard\Data\**" />
+    <Content Remove="Areas\ServiceWizzard\Models\**" />
+    <Content Remove="Areas\ServiceWizzard\Views\**" />
+    <EmbeddedResource Remove="Areas\ServiceWizzard\Controllers\**" />
+    <EmbeddedResource Remove="Areas\ServiceWizzard\Data\**" />
+    <EmbeddedResource Remove="Areas\ServiceWizzard\Models\**" />
+    <EmbeddedResource Remove="Areas\ServiceWizzard\Views\**" />
+    <None Remove="Areas\ServiceWizzard\Controllers\**" />
+    <None Remove="Areas\ServiceWizzard\Data\**" />
+    <None Remove="Areas\ServiceWizzard\Models\**" />
+    <None Remove="Areas\ServiceWizzard\Views\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FamilyHubs.SharedKernel" Version="2.0.29" />
     <PackageReference Include="FamilyHubs.SharedKernel.Razor" Version="1.1.0" />
@@ -14,6 +33,7 @@
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.8" />
     <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
@@ -28,6 +48,7 @@
     <None Remove="styles\scss\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Areas\ServiceWizzardTemp\" />
     <Folder Include="styles\patterns\" />
     <Folder Include="styles\pages\" />
   </ItemGroup>
