Only show spreadsheet data when config is turned on

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -2,6 +2,7 @@
   "AllowedHosts": "*",
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPINSIGHTS_CONNECTION_STRING": "",
+  "ShowSpreadsheetData": false,
   "LogLevel": "Verbose",
   "CacheConnection": "",
   "SessionTimeOutMinutes": 30,
