--- a/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Core/FamilyHubs.ServiceDirectory.Admin.Core.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetCore.NPOI" Version="1.2.3" />
+    <PackageReference Include="FamilyHubs.Notification.Api.Client" Version="1.1.1" />
+    <PackageReference Include="FamilyHubs.Notification.Api.Contracts" Version="1.0.2" />
     <PackageReference Include="FamilyHubs.ServiceDirectory.Shared" Version="2.0.5" />
     <PackageReference Include="FamilyHubs.SharedKernel" Version="2.0.29" />
     <PackageReference Include="FamilyHubs.SharedKernel.Razor" Version="1.1.0" />
