Notification section added to appsettings.json

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -30,5 +30,8 @@
       "UseStubClaims": false
     },
     "CookieName": "FamilyHubs.Admin.Ui"
+  },
+  "Notification": {
+    "Endpoint": "https://localhost:7073/api/notify"   
   }
 }
