Swapped Gov Notify for notification api (#232)
* Swapped original Gov Notify for Notify API

* Fixed errors

* Swaped Gov Notify for Notification API

* Notification section added to appsettings.json

* removed GovUkNotifyApiKey as no longer required

---------

Co-authored-by: Martin-Belton-gov <martin.belton@digital.education.gov.uk>
Co-authored-by: Witek <witek.poreda@education.gov.uk>

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -3,7 +3,6 @@
   "APPINSIGHTS_INSTRUMENTATIONKEY": "",
   "APPINSIGHTS_CONNECTION_STRING": "",
   "LogLevel": "Verbose",
-  "GovUkNotifyApiKey": "",
   "CacheConnection": "",
   "SessionTimeOutMinutes": 60,
   "IsUploadSpreadsheetEnabled": true,
@@ -30,5 +29,8 @@
       "UseStubClaims": false
     },
     "CookieName": "FamilyHubs.Admin.Ui"
+  },
+  "Notification": {
+    "Endpoint": "https://localhost:7073/api/notify"   
   }
 }
