Added Initial Token

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -24,6 +24,7 @@
       "NoClaimsRedirect": "https://localhost:7216/Error/401"
     },
     "IdamsApiBaseUrl": "https://localhost:7030",
+    "UIBaseUrl": "www.connect-families-to-support.education.gov.uk",
     "StubAuthentication": {
       "UseStubAuthentication": false,
       "UseStubClaims": false
