add tokes to all send emails

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -32,6 +32,16 @@
     "CookieName": "FamilyHubs.Admin.Ui"
   },
   "Notification": {
-    "Endpoint": "https://localhost:7073/api/notify"   
+    "Endpoint": "https://localhost:7073/api/notify"
+  },
+  "FamilyHubsUi": {
+    "ServiceName": "Manage family support services and accounts",
+    "Phase": "Beta",
+    "FeedbackUrl": "",
+    "SupportEmail": "",
+    "Urls": {
+      "ConnectWeb": "https://localhost:7270/",
+      "ManageWeb": "https://localhost:7216/"
+    }
   }
 }
