--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -30,7 +30,35 @@
     },
     "CookieName": "FamilyHubs.Admin.Ui"
   },
+  "FamilyHubsUi": {
+    "ServiceName": "Manage family support services and accounts",
+    "Phase": "Beta",
+    "FeedbackUrl": "",
+    "SupportEmail": "",
+    "Urls": {
+      "DashboardWeb": "https://localhost:7166/",
+      "ManageWeb": "https://test.manage-family-support-services-and-accounts.education.gov.uk"
+    },
+    "Analytics": {
+      "CookieName": "manage_family_support_cookies_policy",
+      "CookieVersion": 1,
+      "MeasurementId": "",
+      "ContainerId": ""
+    },
+    "Header": {
+      "ActionLinks": [
+        {
+          "Text": "My account",
+          "Url": "myaccount/viewpersonaldetails"
+        },
+        {
+          "Text": "Sign out",
+          "Url": "account/signout"
+        }
+      ]
+    }
+  },
   "Notification": {
-    "Endpoint": "https://localhost:7073/api/notify"   
+    "Endpoint": "https://localhost:7073/api/notify"
   }
 }
