FHG-4291 Agree to Terms and Conditions

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -21,7 +21,8 @@
     },
     "Urls": {
       "SignedOutRedirect": "https://localhost:7216/signout",
-      "NoClaimsRedirect": "https://localhost:7216/Error/401"
+      "NoClaimsRedirect": "https://localhost:7216/Error/401",
+      "TermsAndConditionsRedirect": "https://localhost:7216/AgreeToTermsAndConditions"
     },
     "IdamsApiBaseUrl": "https://localhost:7030",
     "StubAuthentication": {
