use standard 404 error page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/appsettings.json
@@ -34,7 +34,7 @@
     "ServiceName": "Manage family support services and accounts",
     "Phase": "Beta",
     "FeedbackUrl": "https://dferesearch.fra1.qualtrics.com/jfe/form/SV_55bovSWW2AlnNwG",
-    "SupportEmail": "",
+    "SupportEmail": "manage-family-support.service@education.gov.uk",
     "Urls": {
     },
     "Analytics": {
@@ -53,6 +53,20 @@
           "Text": "Sign out",
           "Url": "account/signout"
         }
+      ]
+    },
+    "Footer": {
+      "Links": [
+        { "Text": "Accessibility" },
+        { "Text": "Contact Us" },
+        { "Text": "Cookies" },
+        {
+          "Text": "Feedback survey",
+          "ConfigUrl": "FamilyHubsUi:FeedbackUrl",
+          "OpenInNewTab": true
+        },
+        { "Text": "Privacy" },
+        { "Text": "Terms and conditions" }
       ]
     }
   },
